--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,6 @@
 // Colors
+$dark-blue: #364051;
+$dark-grey : #333333;
 
 // Spacing
 $s-size: 1.2rem;
@@ -6,3 +8,5 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $desktop-breakpoint: 45rem;
+$font-size-large: 1.8rem;
+
