--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,7 @@
 @import './components/page-header';
 @import './components/input-group';
 @import './components/input';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
